--- a/build.gradle
+++ b/build.gradle
@@ -23,6 +23,11 @@ subprojects {
         providedCompile('org.projectlombok:lombok:1.16.6')
         testCompile('junit:junit:4.11')
         testCompile('org.mockito:mockito-all:1.8.4')
+        compile('org.hibernate:hibernate-entitymanager:5.1.0.Final')
+        compile('org.hibernate:hibernate-core:5.1.0.Final')
+        compile('org.hibernate:hibernate-c3p0:5.1.0.Final')
+        compile('mysql:mysql-connector-java:5.1.38')
+
     }
 }
 
@@ -35,12 +40,6 @@ project(":web") {
         compile('org.springframework.boot:spring-boot-starter-web:1.3.2.RELEASE') {
             exclude module: 'spring-boot-starter-tomcat'
         }
-        // spring-bootはhibernate 4に依存しているので5で上書き
-        compile('org.hibernate:hibernate-core:5.0.7.Final')
-        compile('org.hibernate:hibernate-entitymanager:5.0.7.Final')
-
-        // コンパイル用
-        providedCompile('javax.servlet:javax.servlet-api:3.1.0')
 
         // bootRun用
         providedRuntime('org.springframework.boot:spring-boot-starter-tomcat:1.3.2.RELEASE')
@@ -49,15 +48,23 @@ project(":web") {
         compile('org.thymeleaf:thymeleaf:2.1.4.RELEASE')
         compile('org.thymeleaf:thymeleaf-spring4:2.1.4.RELEASE')
         compile('nz.net.ultraq.thymeleaf:thymeleaf-layout-dialect:1.3.1')
-        compile project(":domain")
+        compile project(":board")
+        compile project(":core")
         compile project(":common")
     }
 }
 
-project(":domain") {
+project(":board") {
     dependencies {
-        compile('org.hibernate:hibernate-entitymanager:5.0.7.Final')
-        compile('mysql:mysql-connector-java:5.1.38')
+        compile project(":core")
+        compile project(":common")
+    }
+}
+
+project(":core") {
+    dependencies {
+        compile('com.tinkerpop.blueprints:blueprints-neo4j-graph:2.6.0')
+        compile('com.tinkerpop.blueprints:blueprints-core:2.6.0')
         compile project(":common")
     }
 }
@@ -69,5 +76,6 @@ project(":common") {
             exclude module: 'spring-boot-starter-tomcat'
         }
         providedCompile('javax.servlet:javax.servlet-api:3.1.0')
+        providedCompile('org.hibernate.javax.persistence:hibernate-jpa-2.1-api:1.0.0.Final')
     }
 }
