--- a/build.gradle
+++ b/build.gradle
@@ -48,6 +48,7 @@ project(":web") {
         compile('org.thymeleaf:thymeleaf:2.1.4.RELEASE')
         compile('org.thymeleaf:thymeleaf-spring4:2.1.4.RELEASE')
         compile('nz.net.ultraq.thymeleaf:thymeleaf-layout-dialect:1.3.1')
+        compile project(":imp")
         compile project(":board")
         compile project(":core")
         compile project(":common")
@@ -61,7 +62,7 @@ project(":board") {
     }
 }
 
-project(":keiba") {
+project(":imp") {
     dependencies {
         compile('com.tinkerpop.blueprints:blueprints-neo4j-graph:2.6.0')
         compile('com.tinkerpop.blueprints:blueprints-core:2.6.0')
